// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password snapshot 1`] = `
<DocumentFragment>
  <div
    class="field"
  >
    <label>
      <span
        class="label-required"
      >
        *
      </span>
      Password
    </label>
    <div
      class="field input"
    >
      <div
        class="ui input"
      >
        <input
          name="password"
          placeholder="Please input password"
          type="password"
        />
      </div>
    </div>
  </div>
  <div
    class="tip-text"
  >
    Password can only contain letters, numbers, '.', '_' or '-'.
  </div>
</DocumentFragment>
`;

exports[`Password snapshot 2`] = `
<DocumentFragment>
  <div
    class="field"
  >
    <label>
      <span
        class="label-required"
      >
        *
      </span>
      Password
    </label>
    <div
      class="error field input"
    >
      <div
        class="ui input"
      >
        <input
          aria-invalid="true"
          name="password"
          placeholder="Please input password"
          type="password"
        />
      </div>
    </div>
  </div>
  <div
    class="error-text"
  >
    error message
  </div>
  <div
    class="tip-text"
  >
    Password can only contain letters, numbers, '.', '_' or '-'.
  </div>
</DocumentFragment>
`;
